[gd_scene load_steps=18 format=3 uid="uid://cmwupfjitgcv3"]

[ext_resource type="Script" path="res://scripts/entities/greenBoss.gd" id="1_k5d65"]
[ext_resource type="Resource" path="res://dialogues/abilityTuto/greenBossAbility.dtl" id="2_tjf1k"]
[ext_resource type="Material" uid="uid://cll0t8a8muesf" path="res://materials/entities/M_GreenBoss.tres" id="6_mc1yq"]
[ext_resource type="Texture2D" uid="uid://rdpqmlr087bk" path="res://textures/enemies/T_Boss.tres" id="7_0b0i0"]
[ext_resource type="Script" path="res://scripts/skills/greenBossThrowFallingEnemies.gd" id="9_tsl07"]
[ext_resource type="PackedScene" uid="uid://vlxakc8grnel" path="res://gameplayObjects/enemies/fallingEnemy.tscn" id="10_xvk53"]
[ext_resource type="Script" path="res://scripts/skills/greenBossAngularThrowEnemies.gd" id="11_q7wl8"]
[ext_resource type="Script" path="res://scripts/skills/greenBossThrowFlyingEnemies.gd" id="12_4v51v"]
[ext_resource type="Script" path="res://scripts/health.gd" id="14_fdol0"]
[ext_resource type="Script" path="res://scripts/glowOnHit.gd" id="15_3lrce"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="16_6m5kl"]
[ext_resource type="Script" path="res://scripts/damageArea.gd" id="17_10c1g"]
[ext_resource type="Script" path="res://scripts/DetectionRange.gd" id="18_8vclr"]

[sub_resource type="QuadMesh" id="QuadMesh_qqx0d"]
size = Vector2(500, 500)

[sub_resource type="CircleShape2D" id="CircleShape2D_fc5ep"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8ohla"]
radius = 4000.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rmcg2"]
bg_color = Color(0.690196, 0, 0.0745098, 1)

[node name="GreenBoss" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_k5d65")
endDialogue = ExtResource("2_tjf1k")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 50.0
target_desired_distance = 100.0

[node name="MeshInstance2D3" type="MeshInstance2D" parent="."]
material = ExtResource("6_mc1yq")
mesh = SubResource("QuadMesh_qqx0d")
texture = ExtResource("7_0b0i0")

[node name="Health" type="Node" parent="."]
script = ExtResource("14_fdol0")
life = 60.0
maxLife = 60.0

[node name="GlowOnHit" type="Node" parent="Health"]
script = ExtResource("15_3lrce")

[node name="Enemy" type="Node" parent="."]
script = ExtResource("16_6m5kl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fc5ep")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8
script = ExtResource("17_10c1g")
dmg = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_fc5ep")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8
script = ExtResource("18_8vclr")
shouldNotifyOut = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_8ohla")
debug_color = Color(0.678431, 0.0980392, 0, 0.0862745)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 500
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 500
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]Green Circle Boss[/center]"
fit_content = true

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_rmcg2")
value = 100.0
show_percentage = false

[node name="ThrowFallingEnemies" type="Node" parent="."]
script = ExtResource("9_tsl07")
enemyToSpawn = ExtResource("10_xvk53")

[node name="Timer" type="Timer" parent="ThrowFallingEnemies"]
wait_time = 0.05

[node name="AngularThrowEnemies" type="Node" parent="."]
script = ExtResource("11_q7wl8")
enemyToSpawn = ExtResource("10_xvk53")

[node name="Timer" type="Timer" parent="AngularThrowEnemies"]
wait_time = 0.5

[node name="ThrowFlyingEnemies" type="Node" parent="."]
script = ExtResource("12_4v51v")

[connection signal="area_entered" from="DamageArea" to="DamageArea" method="_on_area_entered"]
[connection signal="body_entered" from="DamageArea" to="DamageArea" method="_on_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="DetectionArea" method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="DetectionArea" method="_on_body_exited"]
[connection signal="timeout" from="ThrowFallingEnemies/Timer" to="ThrowFallingEnemies" method="_on_timer_timeout"]
